# ProjectsHub

./: .gitignore  README.md  vue_info.txt
ElixirConcepts/: .gitignore
ElixirConcepts/TODO/: ElixirConcepts.md
ElixirConcepts/lib/: manager.ex
ElixirLeadge/: ElixirSyntaxFantasy  mix.exs
ElixirLeadge/TODO/: ElixirConcepts.md  README.md
ElixirLeadge/lib/: Manager.ex  manager.ex
ElixirLeadge/test/: elixir_leadge_test.exs  order_model_test.exs  simple_math_operation_test.exs  test_helper.exs
ElixirPR/syntaxes/: .gitignore  README.md  mix.exs
ErlangPR/: TODO.md
ErlangPR/concepts/: LICENSE.md  README.md  rebar.config
ErlangPR/example/: erlang_todo.md  rebar.config
Interests/: .gitignore
Inż/: TODO.md
Inż/Notatki Żydówa/: Notatki z wykładów Podstawy Programowania od lucji.txt
Inż/Zadania/: cwiczenia.c  cwiczenia.css  egzamin_1_try.sh
JavaPR/: pom.xml
JavaScriptPR/ReactJS/: package.json
PythonPR/OOP/: first.json  (+2 more)
TestsKnowledge/: Behave.py  Classes.py  Collections.py  Files.py  Selenium.py  sql_revise.sql
TestsKnowledge/TestWriting/: pyproject.toml
TestsKnowledge/TestWriting/testwriting/behaveTesting/features/: checking_page_content.feature  text_and_tables.feature
TestsKnowledge/TestWriting/testwriting/behaveTesting/features/steps/: checking_steps.py
TestsKnowledge/TestWriting/testwriting/behaveTesting/features/steps/UtilClasses/: TestedData.py
back-django/: django_info.txt
first-one/: package-lock.json
newtork_monitor/: .gitignore  README.md  mix.exs
sql/: .gitignore  config.py  crud_operation.sql  cursor_connection.py  todo.txt
(+299 files in other folders)
