[tool.poetry]
name = "testwriting"
version = "0.1.0"
description = ""
authors = ["Golon258 <golon338@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
numpy = "^1.26.4"
selenium = "^4.21.0"
behave = "^1.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
